Fix navbar bug on mobile

--- a/components/navigation/Navbar/Navbar.module.css
+++ b/components/navigation/Navbar/Navbar.module.css
@@ -49,7 +49,7 @@
   opacity: 0;
   transition: all 0.6s cubic-bezier(0.5, 0, 0, 0.75);
   cursor: pointer;
-  z-index: 20;
+  z-index: 40;
   transform: scale(0.9);
 }
 
@@ -66,7 +66,7 @@
     transform: translateX(100%);
     transition: all 0.6s cubic-bezier(0.5, 0, 0, 0.75);
     opacity: 0;
-    z-index: 10;
+    z-index: 30;
     max-height: 100vh;
     max-height: calc(var(--vh, 1vh) * 100);
   }
